--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,30 @@
 version: '3,8'
 services:
+  kuki:
+    image: kuki:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 1323:1323
+      - 50051:50051
+    depends_on:
+      - db-kuki
+    volumes:
+      - kuki:/app
+    environment:
+      - GRPC_PORT=50051
+      - REST_PORT=1323
+      - DB_HOST=db-kuki
+      - DB_PORT=5432
+      - DB_USER=kuki
+      - DB_PASS=kuki
+      - DB_NAME=todos
+      - DB_SSL=disable
+    restart: on-failure
+    networks:
+      - kuki
+
   db-kuki:
     image: postgres:15
     restart: always
@@ -7,11 +32,20 @@ services:
       POSTGRES_USER: kuki
       POSTGRES_PASSWORD: kuki
       POSTGRES_DB: kuki
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - 5432:5432
     volumes:
       - db-kuki:/var/lib/postgresql/data
       - ./database/migrations:/docker-entrypoint-initdb.d
+    networks:
+      - kuki
 volumes:
   db-kuki:
     name: db-kuki
+  kuki:
+    name: kuki
+
+networks:
+  kuki:
+    driver: bridge
