--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - 50051:50051
     depends_on:
       - db-kuki
+      - jaeger
     volumes:
       - kuki:/app
     environment:
@@ -40,6 +41,37 @@ services:
       - ./database/migrations:/docker-entrypoint-initdb.d
     networks:
       - kuki
+
+  jaeger:
+    container_name: jaeger_container
+    restart: always
+    image: jaegertracing/all-in-one:1.21
+    environment:
+      - COLLECTOR_ZIPKIN_HTTP_PORT=9411
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686
+      - 14268:14268
+      - 14250:14250
+      - 9411:9411
+    networks:
+      - kuki
+
+  grafana:
+    container_name: grafana_container
+    image: grafana/grafana
+    ports:
+      - '3000:3000'
+    networks:
+      - kuki
+    depends_on:
+      - jaeger
+    volumes:
+      - ./provisioning:/etc/grafana/provisioning
+
 volumes:
   db-kuki:
     name: db-kuki
